2004/03/03 15:58 (-0500) muppetman

	A examples/color_snooper.pl
	A t/GdkPixbuf.t
	M MANIFEST
	  new files.
	
	* xs/GdkEvent.xs: hush compiler warnings

	* xs/GdkPixbuf.xs: un-break Gtk2::Gdk::Pixbuf::get_pixels by
	providing the actual string length to newSVpv

2004/03/03 00:04 (-0500) muppetman

	* Gtk2.pm, README, NEWS: beta release 1.038

	* Makefile.PL: require Glib 1.038
 
	* t/GtkFileChooser.t, t/GtkListStore.t: disable some tests that
	broke with gtk+ 2.3.5

2004/03/02 23:35 (-0500) muppetman
 
	* t/GdkEvent.t, xs/GdkEvent.xs: implement and test setters for
	event.state and event.time

	* xs/Gtk2.xs, t/GdkEvent.t: bind and test Gtk2::main_do_event

2004/03/03 05:32 (+0100) kaffeetisch

	* xs/GtkCellEditable.xs: Make implementing the GtkCellEditable
	vfuncs optional by checking if they exist before calling them.

2004/03/03 00:35 (+0100) kaffeetisch

	* t/GtkFileChooser.t: Change the TODOs to SKIPs -- the bugs have
	been fixed in 2.3.5.

	* t/GtkDnd.t
	* xs/GtkDnd.xs: Bind and test drag_source_[sg]et_target_list.

	* t/GtkFileChooserDialog.t: Only test new_with_backend on versions
	that have it.

	* xs/GtkFileChooserDialog.xs: Add version guards around the
	file-system-backend property.

	* t/GtkFileChooserWidget.t
	* xs/GtkFileChooserWidget.xs: Bind and test new_with_backend.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Bind and test propagate_key_event.

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Bind and test [sg]et_auto_dir.

2004/03/01 13:57 (-0500) rwmcfa1

	* examples/file_chooser.pl: updated uri's to non-muppet specific 
	directories so that example won't fail. it's uses $ENV{HOME} and /tmp/

2004/03/01 19:55 (+0100) kaffeetisch

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Bind and test [sg]et_alignment.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Bind and test activate_key.

2004/03/01 02:24 (-0500) muppetman

	* xs/GdkPixmap.xs: bad signature in pod

	* xs/GtkCellRenderer.xs: hide deprecated warnings unless env var
	GTK2PERL_DEBUG is set and true.
