@@ -1,17 +1,53 @@
 #!/usr/bin/perl -w
 use strict;
-use Gtk2::TestHelper tests => 1;
+use Gtk2::TestHelper tests => 19;
 
 # $Header$
 
-my $entry = Gtk2::Entry -> new();
-isa_ok($entry, "Gtk2::CellEditable");
+package EditableTest;
 
-$entry -> start_editing();
-$entry -> start_editing(undef);
-$entry -> start_editing(Gtk2::Gdk::Event -> new("button-press"));
-$entry -> editing_done();
-$entry -> remove_widget();
+use Test::More;
+
+use Glib::Object::Subclass
+  Gtk2::Label::,
+  interfaces => [ Gtk2::CellEditable:: ];
+
+sub START_EDITING {
+  my ($editable, $event) = @_;
+
+  isa_ok($editable, "EditableTest");
+  isa_ok($editable, "Gtk2::Label");
+  isa_ok($editable, "Gtk2::CellEditable");
+
+  ok(not defined $event or ref $event eq "Gtk2::Gdk::Event::Button");
+}
+
+sub EDITING_DONE {
+  my ($editable, $event) = @_;
+
+  isa_ok($editable, "EditableTest");
+  isa_ok($editable, "Gtk2::Label");
+  isa_ok($editable, "Gtk2::CellEditable");
+}
+
+sub REMOVE_WIDGET {
+  my ($editable, $event) = @_;
+
+  isa_ok($editable, "EditableTest");
+  isa_ok($editable, "Gtk2::Label");
+  isa_ok($editable, "Gtk2::CellEditable");
+}
+
+package main;
+
+my $editable = EditableTest -> new();
+isa_ok($editable, "Gtk2::CellEditable");
+
+$editable -> start_editing();
+$editable -> start_editing(undef);
+$editable -> start_editing(Gtk2::Gdk::Event -> new("button-press"));
+$editable -> editing_done();
+$editable -> remove_widget();
 
 __END__
 
